Version 0.9.40dev (?? ??? 2002)
  - Updated Portuguese_BR translation
  - Updated Dutch translation
  - Fixed bug 606332: '+' icons appeared in printer-friendly version of week
    view and day view.
  - Updated Spanish translation
  - Fixed bug 491366: If event goes past midnight, don't display 25:00.
  - Fixed bug 601006: Missing quote in URL notification for rejected event.
  - Fixed bug 597815: After setting preferences for the public user, each
    page had a SQL error at the bottom due to an incorrect entry being added
    to the webcal_user_pref table.
  - Added ability of an admin user to configure layers for public access user.
  - Fixed bug 595976, 583269: error generated in SQL when layers enabled
  - Updated FAQ.html with simpler instructions for configuring public access
    and http-based authentication.
  - Fixed bug: in day.php, events displayed at hour_arr[N] instead of
    the actual event name.
  - Updated Dutch translation
  - Fixed security bug: Don't allow users to put "login=XXX" in the URL
    to read someone else's calendar.
  - Use is_array test on categories to avoid error messsage.
  - Fixed bug: removed call by reference in php-dbi.php.
  - Fixed bug: Event description popup were not displayed in Netscape 4 if
    the event appeared near the bottom of the page.
  - Fixed bug 599323: categories were not being saved properly.
  - Fixed bug 601013: in week.php, leftarrow.gif had syntax error for border
    setting.
  - Added ability to set default for sending reminders to be yes when adding
    a new event.
  - Fixed bug 598947: background colors for today in week view were wrong.
  - Fixed bug 586436: duplicate table in tables-postgres.sql.
  - Updated German translation
  - Updated tables-db2.sql (was out-of-date).
  - Added + icon for adding new events on each hour for week and day views.
  - Fixed bug 598765: Fixed default date setting.
Version 0.9.39 (21 Aug 2002)
  - Fixed bug 597815: Fixed autoset of 'server_url' config setting to